--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "start": "node server.js",
   "type": "module",
   "author": "Airis1k",
   "license": "ISC",
